refactor: restructured the entire project for improved organization

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,13 @@
 :root {
   --border-radius: 12px;
   --logo-color: #5D5D6D;
+  --bg-primary: #F0F0F5;
   --bg-secondary: #FFFF;
   --text-dark: #BABABA;
+  --text-dark2: #0000;
   --delete-color: #52EA5A;
+  --shapes-dark:#09090A ;
+  --shapes: #DCE2E6;
 }
 
 *{
