--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,27 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+  --border-radius: 12px;
+  --logo-color: #5D5D6D;
+  --bg-secondary: #F3F5F6;
+  --bg-primary: #FFFF;
+ 
+  --shapes-dark: #09090A;
+  --text-dark-2: #41414D;
+  
+  
+  --shapes: #DCE2E6;
+  
+  --border-color: #A8A8B3;
+  --success-color: #51B853;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+  
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --caterogy-list: #0ACF83;
+  --secondary-text: #F6F6F6;
+  --text-dark: #BABABA;
+  --car-control-color:  #52EA5A; 
+
+  --cor-letra-:#7F7F7F;
 }
 
 * {
@@ -30,13 +30,9 @@ body {
   margin: 0;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
